<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/icon_row"
        android:title="@null"
        android:orderInCategory="0">
        <menu>
            <item android:id="@+id/action_forward"
                android:title="@string/action_forward"
                android:icon="@drawable/ic_arrow_forward_black_24dp"/>
            <item android:id="@+id/action_page_info"
                android:title="@string/action_page_info"
                android:icon="@drawable/ic_info_outline_black_24dp"/>
            <item android:id="@+id/action_share"
                android:title="@string/action_share"
                android:icon="@drawable/ic_share_black_24dp"/>
            <item android:id="@+id/action_find_in_page"
                android:title="@string/action_find_in_page"
                android:icon="@drawable/ic_find_in_page_black_24dp"/>
            <item android:id="@+id/action_refresh"
                android:title="@string/action_refresh"
                android:icon="@drawable/ic_refresh_black_24dp"/>
        </menu>
    </item>

    <item android:id="@+id/action_request_desktop_row"
        android:title="@string/action_request_desktop"
        android:orderInCategory="2"
        android:checkable="true"/>

    <item android:id="@+id/action_open_in_browser"
        android:title="@string/action_open_in_browser"
        android:orderInCategory="2"/>

</menu>